--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ function gameLoop(timestamp) {
   drawShape();
   //drawLoadingBars(deltaTime); 
   updateParticles();
-  drawSwipes();
+  // drawSwipes();
   updateScore();
   requestAnimationFrame(gameLoop);
 }
@@ -693,17 +693,17 @@ gameCanvas.addEventListener('touchstart', (event) => {
     isSwipingHorizontal = false; // Reset swipe direction
     isSwipingVertical = false;
 
-    swipes.push({
-        startX,
-        startY,
-        endX: startX,
-        endY: startY,
-        moveX: 0,
-        moveY: 0,
-        deltaX: 0,
-        deltaY: 0,
-        horizontal:false,
-    });
+    // swipes.push({
+    //     startX,
+    //     startY,
+    //     endX: startX,
+    //     endY: startY,
+    //     moveX: 0,
+    //     moveY: 0,
+    //     deltaX: 0,
+    //     deltaY: 0,
+    //     horizontal:false,
+    // });
 });
 
 // Detect swipe move (real-time updates)
@@ -724,14 +724,14 @@ gameCanvas.addEventListener('touchmove', (event) => {
     const moveX = Math.sign(deltaX) * Math.floor(Math.abs(deltaX) / sensitivity);
     const moveY = Math.sign(deltaY) * Math.floor(Math.abs(deltaY) / sensitivity);
 
-    // Update the last swipe object in the array
-    const lastSwipe = swipes[swipes.length - 1];
-    lastSwipe.endX = endX;
-    lastSwipe.endY = endY;
-    lastSwipe.moveX = moveX;
-    lastSwipe.moveY = moveY;
-    lastSwipe.deltaX = deltaX;
-    lastSwipe.deltaY = deltaY;
+    // // Update the last swipe object in the array
+    // const lastSwipe = swipes[swipes.length - 1];
+    // lastSwipe.endX = endX;
+    // lastSwipe.endY = endY;
+    // lastSwipe.moveX = moveX;
+    // lastSwipe.moveY = moveY;
+    // lastSwipe.deltaX = deltaX;
+    // lastSwipe.deltaY = deltaY;
 
     if (!isSwipingHorizontal && !isSwipingVertical) {
         // Determine the swipe direction on the first significant movement
